# nbed

./: README.md  pyproject.toml
examples/: nbed-module-Binning-and-Com.ipynb  nbed-module-Binning-and-Export.ipynb  nbed-module-OrientationMap.ipynb  nbed-module-peak_detection.ipynb
examples/.ipynb_checkpoints/: nbed-module-peak_detection-checkpoint.ipynb
src/: __init__.py  helpers.py
src/classes/: pyNBED.py
src/nbed/: helpers.py
src/nbed/classes/: __init__.py  pyNBED.py
