[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nbed"
# dynamic = ["version"]
version="0.1.0"
description = 'A Python class for processing 4D-STEM nanodiffraction data'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Lothar Houben", email = "lothar.houben@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
  
dependencies = ["numpy>=1.26.4","matplotlib>=3.10.0","scipy>=1.15.2","pims>=0.7.0","tqdm>=4.67.1","IPython>=0.9.0","trackpy>=0.6.0"]

[project.urls]
Documentation = "https://github.com/LotharHouben/nbed#readme"
Issues = "https://github.com/LotharHouben/nbed/issues"
Source = "https://github.com/LotharHouben/nbed"


